@@ -5,6 +5,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="code"/>
     <field name="name"/>
     <field name="lang"/>
-    <field name="vat_code"/>
+    <field name="tax_identifier"/>
     <field name="active" tree_invisible="1"/>
 </tree>
